# sparta_django_advanced

./: db.sqlite3  main.py  pyproject.toml
.github/workflows/: ci.yml
sparta/: settings.py  urls.py
